test/good/12_2_spectest.fsf
type list[T] = Nil | Cons(hd:T,tl:list[T])
